--- a/templates/product.mira_wands.liquid
+++ b/templates/product.mira_wands.liquid
@@ -205,3 +205,10 @@
     </div>
   </div>
 </div>
+
+
+<script>
+  // access the every one mont subscription: all_products['fertility-plus-test-wands'].selling_plan_groups[0].selling_plans[0].id
+  const product = {{ all_products['fertility-plus-test-wands'].selling_plan_groups[0].selling_plans[0] | json }}
+  console.log('The Product:', product)
+</script>
