--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -1,6 +1,6 @@
 @media (min-width: 1000px) {
     .valuecont {
-        display: none;
+        display: flex;
         border-top: 1px solid #DBDBDB;
         width: auto;
         margin-top: 48px;
@@ -25,7 +25,7 @@
 }
 
 .valuecont_mob {
-    display: none;
+    display: flex;
     border-top: 1px solid #DBDBDB;
     width: auto;
     padding: 32px 0px;
