--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -1,6 +1,6 @@
 @media (min-width: 1000px) {
     .valuecont {
-        display: flex;
+        display: flex !important;
         border-top: 1px solid #DBDBDB;
         width: auto;
         margin-top: 48px;
@@ -15,7 +15,7 @@
     }
 
     .valuecont_mob {
-        display: none;
+        display: none !important;
     }
 
 }
