-deleted dual column from main
-deleted collumndual.css
-deleted id selectors from products
-deleted data selector from body
-deleted const from customjs.js

--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -30,7 +30,6 @@
           </div>
         </div>
         <div
-          id="productlist"
           class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           {% if localization.market.handle == 'us' %}
@@ -188,7 +187,6 @@
           </div>
         </div>
         <div
-          id="productlist"
           class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           <div class="col-md-12">
@@ -352,7 +350,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Virtual Consultations</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
+        <div class="row accessories-product-list bundles-product-list col-grid">
           <div class="col-md-4">
             <div class="product-col">
               <div class="product-img-col">
@@ -380,7 +378,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Male Fertility</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
+        <div class="row accessories-product-list bundles-product-list col-grid">
           {% if localization.market.handle == 'international'
             or localization.market.handle == 'us'
             or localization.market.handle == 'au'
@@ -446,7 +444,6 @@
           </div>
         </div>
         <div
-          id="productlist"
           class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           {% if localization.market.handle == 'us' %}
