--- a/templates/product.mira_kits.liquid
+++ b/templates/product.mira_kits.liquid
@@ -28,7 +28,7 @@
             ></a>
           </div>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid col-grid">
+        <div class="row accessories-product-list bundles-product-list col-grid col-grid">
           <div class="col-md-4">
             <div class="product-col">
               <div class="product-img-col">
