--- a/templates/product.mira_wands.liquid
+++ b/templates/product.mira_wands.liquid
@@ -25,7 +25,7 @@
             <h3>Mira Wands</h3>
           </div>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
+        <div class="row accessories-product-list bundles-product-list col-grid">
           <div class="col-md-4">
             <div class="product-col">
               <div class="product-img-col">
