--- a/snippets/pdm-estimated-delivery.liquid
+++ b/snippets/pdm-estimated-delivery.liquid
@@ -7,14 +7,17 @@ Params:
 
 {% endcomment %}
 
+{% unless product.url contains "fertility-meditations"
+  or product.url contains "academy"
+  or product.url contains "coaching" %}
 
 {{ 'pdm-estimated-delivery.css' | asset_url | stylesheet_tag }}
-
 
 <script src="{{ 'pdm-estimated-delivery.js' | asset_url }}" defer></script>
 
 
 <div class="pdm-estimated-delivery">
+
   <div class="pdm-estimated-delivery__info">
     <span class="delivery-copy">
       <img src="{{ 'ic-delivery.svg' | asset_url }}" alt="Delivery icon"
@@ -36,3 +39,5 @@ Params:
   </p>
 
 </div>
+
+{% endunless %}
