--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -273,13 +273,13 @@
       
                       {%- when 'description' -%}
                         {%- if product.description != blank -%}
-                          <div class="pro-description custom-pro-des">
+                          <div id="atc-section" class="pro-description custom-pro-des">
                             <div class="full-text show-hide-desc">{{ product.description }}</div>
                           </div>
                         {%- endif -%}
                         
                         {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
-                          <div id="atc-section" class="product__tax caption rte">
+                          <div class="product__tax caption rte">
                             {%- if shop.taxes_included -%}
                               {{ 'products.product.include_taxes' | t }}
                             {%- endif -%}
