--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -651,6 +651,7 @@
                   <div class="product-price-col">
                     <div class="price-btn-row">
                       <span class="plat-price">{{ all_products['prenatal-multivitamin'].price | money }}</span>
+                      <div class="old-price"></div>
                     </div>
   
                     {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', with sub_folder: sub_folder, with num: 18 %}
