add sticky to the all PDPs

--- a/sections/bf-bundle-sections.liquid
+++ b/sections/bf-bundle-sections.liquid
@@ -15,8 +15,8 @@
 
 {% render 'sticky-atc' %}
 
-<section class="bf-bundle-header-banner">
-    <div id="atc-section" class="container">
+<section  id="atc-section" class="bf-bundle-header-banner">
+    <div class="container">
         <div class="bf-bundle-banner-content">
             <div class="limited-edition-label"><span>Limited Edition!</span></div>
             <h5>Special bundle: Science helps you get pregnant faster</h5>
@@ -26,7 +26,7 @@
                 <span class="plat-price">{{ all_products['get-pregnant-bundle'].price | money }}</span>
                 <div class="old-price">{{ all_products['get-pregnant-bundle'].compare_at_price | money }}</div>
             </div>
-            <div class="bf-bundle-banner-btn">
+            <div class="bf-bundle-banner-btn product-form__buttons">
                 <form method="post" action="{{ sub_folder }}/cart/add" class="add-to-cart">
                     <input type="hidden" name="quantity" value="1">
                     <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
