--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -516,15 +516,16 @@
     {%- endif -%}
 
     <script type="text/javascript" src="{{ 'bootstrap.js' | asset_url }}" async="async"></script>
-    <script type="text/javascript" src="{{ 'owl.carousel.js' | asset_url }}"></script>
-    <script type="text/javascript" src="{{ 'viewportchecker.js' | asset_url }}"></script>
+
+    <script type="text/javascript" src="{{ 'owl.carousel.js' | asset_url }}" defer="defer"></script>
+    <script type="text/javascript" src="{{ 'viewportchecker.js' | asset_url }}" defer="defer"></script>
     <script type="text/javascript" src="{{ 'jquery.flexslider.js' | asset_url }}" defer="defer"></script>
     <script
       src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"
       async="async"
       id="lottie-player-js"
     ></script>
-    <script type="text/javascript" src="{{ 'custom.js' | asset_url }}"></script>
+    <script type="text/javascript" src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
 
     {% if template == 'cart' %}
       <script>
