--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -250,9 +250,7 @@
             <div class="col-md-12">
               <div class="product-col">
                 <div class="product-img-col">
-                  <a href="{{ sub_folder }}/products/mira-max-test-wands"
-                    ><img src="{{ '20_Mira_Fertility_MAX_Wands.png' | file_img_url: '' }}" alt=""
-                  ></a>
+                  <a href="{{ sub_folder }}/products/mira-max-test-wands" ><img src="{{ '20_Mira_Fertility_MAX_Wands.png' | file_img_url: '' }}" alt=""></a>
                   <span class="offer-badge mira-green-badge main-pro-img-badge">
                     <svg width="109" height="108" viewBox="0 0 109 108" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M57.4279 1.12028L60.9704 4.25332C62.231 5.36833 64.0248 5.68009 65.5962 5.05762L70.012 3.30832C72.1172 2.47428 74.5217 3.33722 75.5906 5.31053L77.833 9.44931C78.6309 10.9223 80.2081 11.8202 81.9009 11.7652L86.657 11.6106C88.9246 11.5367 90.8848 13.1586 91.2048 15.3735L91.8763 20.0189C92.1152 21.672 93.286 23.0477 94.8956 23.5669L99.4185 25.0255C101.575 25.7209 102.854 27.906 102.387 30.0951L101.406 34.6868C101.058 36.3209 101.681 38.0084 103.013 39.039L106.757 41.9352C108.542 43.316 108.987 45.8006 107.788 47.7001L105.274 51.6842C104.38 53.1021 104.38 54.8981 105.274 56.3158L107.788 60.2999C108.987 62.1994 108.542 64.684 106.757 66.0648L103.013 68.961C101.681 69.9916 101.058 71.6791 101.406 73.3132L102.387 77.9049C102.854 80.094 101.575 82.2791 99.4185 82.9745L94.8956 84.4331C93.286 84.9523 92.1152 86.328 91.8763 87.9811L91.2048 92.6265C90.8848 94.8414 88.9246 96.463 86.657 96.3894L81.9009 96.2348C80.2084 96.1798 78.6311 97.0777 77.833 98.5507L75.5906 102.689C74.5217 104.663 72.1172 105.526 70.012 104.692L65.5962 102.942C64.0248 102.32 62.2313 102.632 60.9704 103.747L57.4279 106.88C55.7389 108.373 53.18 108.373 51.4911 106.88L47.9486 103.747C46.6879 102.632 44.8942 102.32 43.3227 102.942L38.907 104.692C36.8018 105.526 34.3973 104.663 33.3283 102.689L31.086 98.5507C30.2881 97.0777 28.7108 96.1798 27.0181 96.2348L22.2619 96.3894C19.9944 96.4632 18.0342 94.8414 17.7142 92.6265L17.0427 87.9811C16.8037 86.328 15.6329 84.9523 14.0234 84.4331L9.50044 82.9745C7.34411 82.2791 6.06465 80.094 6.53207 77.9049L7.51247 73.3132C7.86138 71.6791 7.23844 69.9916 5.90592 68.961L2.16165 66.0648C0.376475 64.684 -0.0678403 62.1994 1.13076 60.2999L3.64477 56.3158C4.53939 54.8978 4.53939 53.1019 3.64477 51.6842L1.13098 47.6996C-0.0676264 45.8002 0.376689 43.3153 2.16186 41.9348L5.90613 39.0386C7.23865 38.008 7.86159 36.3205 7.51268 34.6864L6.53228 30.0947C6.06486 27.9056 7.34433 25.7205 9.50066 25.0251L14.0236 23.5664C15.6331 23.0473 16.8039 21.6716 17.0429 20.0185L17.7144 15.373C18.0344 13.1582 19.9946 11.5365 22.2621 11.6101L27.0183 11.7648C28.7108 11.8198 30.2881 10.9219 31.0862 9.44889L33.3285 5.31011C34.3975 3.3368 36.802 2.47386 38.9072 3.3079L43.3229 5.0572C44.8944 5.67967 46.6879 5.36791 47.9488 4.2529L51.4913 1.11986C53.18 -0.373357 55.7389 -0.373357 57.4279 1.12028Z" fill="#4E6A54"></path>
@@ -284,9 +282,7 @@
             <div class="col-md-12">
               <div class="product-col">
                 <div class="product-img-col">
-                  <a href="{{ sub_folder }}/products/fertility-plus-test-wands"
-                    ><img src="{{ '20_Mira_Fertility_Plus_Wands.png' | file_img_url: '' }}" alt=""
-                  ></a>
+                  <a href="{{ sub_folder }}/products/fertility-plus-test-wands"><img src="{{ '20_Mira_Fertility_Plus_Wands.png' | file_img_url: '' }}" alt=""></a>
                 </div>
                 <h4>
                   <a href="{{ sub_folder }}/products/fertility-plus-test-wands">
@@ -302,10 +298,7 @@
   
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', with sub_folder: sub_folder, with num: 8 %}
   
-  
-                  <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
-                    >Buy&nbsp;now</a
-                  >
+                  <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
