--- a/snippets/sticky-atc.liquid
+++ b/snippets/sticky-atc.liquid
@@ -96,6 +96,9 @@
       <div class="sticky-atc__title">{{ product.title }}</div>
       <div class="sticky-atc__review-box yotpo bottomLine sticky-atc__review-bg" data-product-id="{{ product.id }}"></div>
       <button id="atcButton" class="sticky-atc__button">Select Your Product</button>
+      <a href="#atc-section">
+      HELLO
+     </a>
     </div>
   </div>
 </div>
