--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -518,6 +518,8 @@
     <script type="text/javascript" src="{{ 'bootstrap.js' | asset_url }}" async="async"></script>
 
     <script type="text/javascript" src="{{ 'owl.carousel.js' | asset_url }}" defer="defer"></script>
+    <script type="text/javascript" src='{{ 'add-to-cart.js' | asset_url}}' defer='defer'></script>
+
     <script type="text/javascript" src="{{ 'viewportchecker.js' | asset_url }}" defer="defer"></script>
     <script type="text/javascript" src="{{ 'jquery.flexslider.js' | asset_url }}" defer="defer"></script>
     <script
@@ -653,6 +655,6 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Add To Cart -->
-    <script src='{{ 'add-to-cart.js' | asset_url}}' defer='defer'></script>
+    
   </body>
 </html>
