--- a/snippets/subscription-plp-endrock.liquid
+++ b/snippets/subscription-plp-endrock.liquid
@@ -15,7 +15,7 @@
           <div>Subscribe & save <span class="subscription-highlight">10% OFF</span>
           <p class="text-span">Cancel or change your subscription online any time</p></div>
         </label>
-        <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper">
+        <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper" data-one-time-purchase>
           <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}"/>
           One-time purchase
         </label>
