--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -456,7 +456,7 @@
   <body
     data-dual-col="true"
     class="gradient template-{{ template | split: '.' | first }} {{ template }}{% if template == "product" %} {{ product.handle }}{% endif %} {% for tag in product.tags %} {{ tag }}{% endfor %}"
-    data-sticky-bottom
+    data-sticky-top
   >
   {% render 'sticky-atc' %}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
