--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -764,7 +764,7 @@
                 </div>
               </div>
             {% endif %}
-
+          {% if all_products['mira-stainless-steel-bottle'].available == true %}   
           <div class="col-md-12">
             <div class="product-col">
                 <div class="product-img-col">
@@ -781,11 +781,15 @@
                         <span class="plat-price">$15.99</span>
                         <div class="old-price"></div>
                     </div>
-                    <a href="{{ sub_folder }}/products/mira-stainless-steel-bottle" class="btn-custom btn-pink">Buy&nbsp;now</a>
+
+                    {% include 'subscription-plp-endrock', with string_variable: 'mira-stainless-steel-bottle', with sub_folder: sub_folder, with num: 46 %}
+
+                    <a href="{{ sub_folder }}/products/mira-stainless-steel-bottle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
             </div>
         </div>
-
+        {% endif %}
+        {% if all_products['mira-recycled-tri-borough-shopper'].available == true %}  
           <div class="col-md-12">
               <div class="product-col">
                   <div class="product-img-col">
@@ -802,10 +806,14 @@
                           <span class="plat-price">$16.99</span>
                           <div class="old-price"></div>
                       </div>
-                      <a href="{{ sub_folder }}/products/mira-recycled-tri-borough-shopper" class="btn-custom btn-pink">Buy&nbsp;now</a>
+
+                      {% include 'subscription-plp-endrock', with string_variable: 'mira-stainless-steel-bottle', with sub_folder: sub_folder, with num: 47 %}
+
+                      <a href="{{ sub_folder }}/products/mira-recycled-tri-borough-shopper" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                   </div>
               </div>
           </div>
+        {% endif %}
 
           
           {% endif %}
