apply mira requested changes

--- a/assets/style.css
+++ b/assets/style.css
@@ -3023,6 +3023,11 @@ html[xmlns] .flexslider .slides {
     cursor: pointer;
 }
 
+/*test*/
+
+
+
+/*====*/
 .selected-label {
     background-color: #C2DCCB;
   }
