--- a/snippets/subscription-plp-endrock.liquid
+++ b/snippets/subscription-plp-endrock.liquid
@@ -16,7 +16,7 @@
           <p class="text-span">Cancel or change your subscription online any time</p></div>
         </label>
         <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper" data-one-time-purchase>
-          <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}"/>
+          <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}" data-one-time-input/>
           One-time purchase
         </label>
     {% endif %}
