--- a/snippets/subscription-plp-endrock.liquid
+++ b/snippets/subscription-plp-endrock.liquid
@@ -10,12 +10,12 @@
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="id" value="{{ all_products[product_handle].variants.first.id }}" />
     {% if all_products[product_handle].selling_plan_groups != blank %}                   
-        <label for="subscription-endrock{{ number }}" class="subscriptions-text card-style subscription-wrapper" data-subscription-label>
+        <label class="subscriptions-text card-style subscription-wrapper" data-subscription-label>
           <input type="radio" name="subscription-type" id="subscription-endrock{{ number }}" data-subscription-input/>
           <div>Subscribe & save <span class="subscription-highlight">10% OFF</span>
           <p class="text-span">Cancel or change your subscription online any time</p></div>
         </label>
-        <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper" data-one-time-purchase>
+        <label class="subscriptions-text card-style one-time-wrapper" data-one-time-purchase>
           <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}" data-one-time-input/>
           One-time purchase
         </label>
@@ -36,3 +36,14 @@
   }
 </script>
 
+{%- comment -%}
+        <label for="subscription-endrock{{ number }}" class="subscriptions-text card-style subscription-wrapper" data-subscription-label>
+          <input type="radio" name="subscription-type" id="subscription-endrock{{ number }}" data-subscription-input/>
+          <div>Subscribe & save <span class="subscription-highlight">10% OFF</span>
+          <p class="text-span">Cancel or change your subscription online any time</p></div>
+        </label>
+        <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper" data-one-time-purchase>
+          <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}" data-one-time-input/>
+          One-time purchase
+        </label>
+{%- endcomment -%}
